manifests/domains/payments-checkout/checkout-backend-api.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: prod-checkout
  labels:
    cost-center: "finops-checkout-404"
    owner: "checkout-team"
    pod-security.kubernetes.io/enforce: "baseline"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: checkout-backend-api
  namespace: prod-checkout
  labels:
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      annotations:
        argocd.argoproj.io/sync-wave: "2"
      labels:
        app: backend-api
    spec:
      containers:
        - name: api-server
          image: nginx:alpine
