manifests/domains/payments-checkout/network-daemon.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: prod-payments
  labels:
    cost-center: "finops-payments-101"
    owner: "payments-team"
    pod-security.kubernetes.io/enforce: "baseline"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: network-daemon-spooler
  namespace: prod-payments
spec:
  replicas: 40
  selector:
    matchLabels:
      app: network-daemon
  template:
    metadata:
      annotations:
        argocd.argoproj.io/sync-wave: "2"
      labels:
        app: network-daemon
    spec:
      containers:
        - name: pause
          image: registry.k8s.io/pause:3.9
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
