manifests/domains/payments-checkout/checkout-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: redis-headless
  namespace: prod-checkout
spec:
  clusterIP: None
  selector:
    app: db-redis
  ports:
    - port: 6379
      name: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: db-redis
  namespace: prod-checkout
spec:
  serviceName: "redis-headless"
  replicas: 1
  selector:
    matchLabels:
      app: db-redis
  template:
    metadata:
      annotations:
        argocd.argoproj.io/sync-wave: "2"
      labels:
        app: db-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: isolate-dns-and-gcp-egress
  namespace: prod-checkout
  labels:
spec:
  podSelector:
    matchLabels:
      app: checkout-backend
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/8
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: checkout-backend
  namespace: prod-checkout
  labels:
spec:
  replicas: 2
  selector:
    matchLabels:
      app: checkout-backend
  template:
    metadata:
      annotations:
        argocd.argoproj.io/sync-wave: "2"
      labels:
        app: checkout-backend
    spec:
      containers:
        - name: backend
          image: google/cloud-sdk:slim
          command: ["/bin/sh", "-c"]
          args:
            - |
              echo "Connecting to GCP Cloud Storage & internal Redis..."
              curl -s --connect-timeout 3 http://169.254.169.254/computeMetadata/v1/ || echo "Metadata Server connection timed out via NetworkPolicy!"
              getent hosts db-redis.prod-checkout.svc.cluster.local || { echo "FATAL: Could not resolve Redis host or access GCP services!"; exit 1; }
              sleep 3600
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
